<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/start_button"
        android:padding="@dimen/manu_btn_padding"
        android:textSize="@dimen/menu_textsize"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/setting_button"
        android:padding="@dimen/manu_btn_padding"
        android:textSize="@dimen/menu_textsize"
        android:backgroundTint="@color/button_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="@dimen/menu_textsize"
        android:text="@string/creator"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/creator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/creator_name"
        android:textColor="@color/text"/>

</FrameLayout>