<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/menu_textsize"
        android:text="@string/min_word_size"/>
    <RadioGroup
        android:id="@+id/min_word_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_letters"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_letters"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_letters"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/menu_textsize"
        android:text="@string/max_word_size"/>
    <RadioGroup
        android:id="@+id/max_word_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_letters"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_letters"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_letters"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/menu_textsize"
        android:text="@string/game_time"/>
    <RadioGroup
        android:id="@+id/game_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_mins"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_mins"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/n_mins"/>
    </RadioGroup>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:textSize="@dimen/menu_textsize"
        android:padding="@dimen/manu_btn_padding"
        android:text="@string/save"/>

</LinearLayout>