<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/min_word_size_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/menu_textsize"
                android:text="@string/min_word_size"/>
            <RadioGroup
                android:id="@+id/min_word_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/min_word_size_tv"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/padding_between_elements"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_letters"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_letters"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_letters"/>
            </RadioGroup>

            <TextView
                android:id="@+id/max_word_size_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/min_word_size"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/menu_textsize"
                android:text="@string/max_word_size"/>
            <RadioGroup
                android:id="@+id/max_word_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_word_size_tv"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/padding_between_elements"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_letters"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_letters"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_letters"/>
            </RadioGroup>

            <TextView
                android:id="@+id/game_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_word_size"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/menu_textsize"
                android:text="@string/game_time"/>
            <RadioGroup
                android:id="@+id/game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/game_time_tv"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/padding_between_elements"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_mins"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_mins"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_mins"/>
            </RadioGroup>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/game_time"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/button_color"
                android:textSize="@dimen/menu_textsize"
                android:padding="@dimen/manu_btn_padding"
                android:text="@string/save"/>
            </RelativeLayout>

    </ScrollView>

</FrameLayout>