<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.GameFragment">

    <TextView
        android:id="@+id/time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        tools:text="@string/n_s"
        android:paddingTop="@dimen/padding_between_elements"
        android:textColor="@color/time_left"
        android:textSize="@dimen/big_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/guessed_words_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/guessed_words"
            android:textSize="@dimen/menu_textsize"/>
        <TextView
            android:id="@+id/guessed_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/guessed_words_tv"
            android:layout_centerHorizontal="true"
            tools:text="@string/n_words"
            android:textColor="@color/n_words"
            android:textSize="@dimen/big_text"/>

    </RelativeLayout>>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/line_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</FrameLayout>